# A-Dynamic-Object-Removal-Method-Based-on-LiDAR-4D-Radar-Fushion-in--Dynamic-Traffic-Scenarios

./: README.md
src/Dynamic_Flow/: CMakeLists.txt  package.xml
src/Dynamic_Flow/launch/: Dynamic_flow.launch
src/Dynamic_Flow/src/: Dynamic_flow.cpp
src/libraries/: CMakeLists.txt  package.xml
src/libraries/include/: lib_EKF_whx.h  lib_cluster_kdtree.h  lib_cluster_lidar.h  lib_cluster_processPointClouds.h  lib_cluster_render.h  lib_cluster_whx.h  lib_detection_whx.h  lib_ground_whx.h  lib_hungarian_whx.h  lib_io_boundingbox_whx.h  lib_io_calib_whx.h  lib_io_flow_whx.h  lib_io_label_whx.h  lib_io_pointcloud_whx.h  lib_io_pose_whx.h  lib_io_radar_whx.h  lib_match_whx.h  lib_ndt_whx.h  lib_others_whx.h  lib_path_whx.h  lib_tracking_whx.h  libs_system_all.h
src/libraries/src/: lib_EKF_whx.cpp  lib_cluster_kdtree.cpp  lib_cluster_processPointClouds.cpp  lib_cluster_render.cpp  lib_cluster_whx.cpp  lib_detection_whx.cpp  lib_ground_whx.cpp  lib_hungarian_whx.cpp  lib_io_boundingbox_whx.cpp  lib_io_calib_whx.cpp  lib_io_flow_whx.cpp  lib_io_label_whx.cpp  lib_io_pointcloud_whx.cpp  lib_io_pose_whx.cpp  lib_io_radar_whx.cpp  lib_ndt_whx.cpp  lib_others_whx.cpp  lib_path_whx.cpp  lib_tracking_whx.cpp  libs_system_all.cpp
